--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -40,7 +40,7 @@ about.dialog.contributers=Mitarbeiter
 about.dialog.documentation=Dokumentation
 about.dialog.general_information=Allgemeine Information
 about.dialog.homepage=Homepage
-about.dialog.professional_folder_sharing_tool=Ihre Dateien sind immer verf\u00fcgbar, gesichert und synchron\! 
+about.dialog.professional_folder_sharing_tool=Dateien immer verf\u00fcgbar, gesichert und synchron\! 
 about.dialog.send_bug_report=Fehler melden
 about.dialog.send_bug_report.key=F
 about.dialog.support=Support
@@ -91,7 +91,7 @@ change.friend.personal.message.text=Schicken Sie {0} eine pers\u00f6nliche Nachr
 change.friend.personal.message.title=Nachricht f\u00fcr einen Freund
 
 chat.notification.option1=Antworten
-chat.notification.option2=Schliessen
+chat.notification.option2=Schlieﬂen
 chat.notification.subtitle=<html><center><b>PowerFolder</b></center>Neue Nachricht erhalten</html>
 
 chatpanel.cannot_deliver=Die Nachricht konnte nicht zugestellt werden, da '{0}' nicht verbunden ist\!
@@ -105,9 +105,9 @@ clearcompleteddownloads.description=Entfernt fertiggestellte Downloads (Alt-3)
 clearcompleteddownloads.key=c
 clearcompleteddownloads.name=Aufr\u00e4umen
 
-connect.description=Manuelle Verbindung zu einem Powerfolder Benutzer
+connect.description=Manuelle Verbindung zu einem PowerFolder Benutzer
 connect.dialog.text=Bitte geben Sie den Namen des Hosts oder die IP Adresse des Benutzers an, mit dem Sie verbunden werden m\u00f6chten.\n\nPowerFolder verbindet sich nach kurzer Zeit automatisch mit dem Netzwerk,\nbenutzen Sie diese Option wenn Sie sich manuell verbinden wollen.\n 
-connect.dialog.title=Manuelle Verbindung zu einem Powerfolder Benutzer
+connect.dialog.title=Manuelle Verbindung zu einem PowerFolder Benutzer
 connect.key=c
 connect.name=Verbinden
 
@@ -119,9 +119,9 @@ createshortcut.name=Desktop-Verkn\u00fcfpung erstellen
 
 delete_confimation.busy.description=L\u00f6sche Datei(en)
 delete_confimation.busy.title=L\u00f6sche Datei(en)
-delete_confimation.text=Sind Sie sicher die foldenden Dateien zu l\u00f6schen?\:\n (Hinweis\: Die Dateien werden nicht in den Papierkorb verschoben).
+delete_confimation.text=Sind Sie sicher die folgenden Dateien zu l\u00f6schen?\:\n (Hinweis\: Die Dateien werden nicht in den Papierkorb verschoben).
 delete_confimation.text_delete=M\u00f6chten Sie die folgenden Datein wirklich entg\u00fcltig l\u00f6schen?
-delete_confimation.text_delete_directory=M\u00f6chten Sie die folgenden Datein und Unterverzeichnisse wirklich entg\u00fcltig l\u00f6schen?
+delete_confimation.text_delete_directory=M\u00f6chten Sie die folgenden Dateien und Unterverzeichnisse wirklich entg\u00fcltig l\u00f6schen?
 delete_confimation.text_movetorecyclebin=M\u00f6chten Sie die folgenden Dateien wirklich in den PowerFolder Papierkorb schieben?
 delete_confimation.text_movetorecyclebin_DIR=<VERZ>
 delete_confimation.text_movetorecyclebin_directory=M\u00f6chten Sie die folgenden Dateien wirklich in den PowerFolder Papierkorb schieben?
@@ -141,11 +141,11 @@ dialog.alreadyrunning.exitbutton=Ende
 dialog.alreadyrunning.startbutton=Trotzdem starten
 dialog.alreadyrunning.title=L\u00e4uft bereits
 dialog.alreadyrunning.warning=PowerFolder l\u00e4uft bereits
-dialog.binderror=Der Netzwerk Port is bereits belegt
+dialog.binderror=Der Netzwerk Port ist bereits belegt
 dialog.connect.connecting=Verbinde
 dialog.connect.connecting_to=Verbinde zu {0}...
 dialog.connection_problem=Verbindungsproblem
-dialog.customsync.autodownloadfromfriends=Autmatischer Download von Freunden
+dialog.customsync.autodownloadfromfriends=Automatischer Download von Freunden
 dialog.customsync.autodownloadfromother=Automatischer Download von Anderen
 dialog.customsync.changedetection_disabled=\u00c4nderungen werden nicht erkannt
 dialog.customsync.dailySync=T\u00e4gliches Synchronisieren
@@ -154,7 +154,7 @@ dialog.customsync.hourDaySync=Stunde / Tag der \u00c4nderungssuche
 dialog.customsync.regularSync=Regul\u00e4re Synchronisation
 dialog.customsync.syncdeletionwithfriends=Dateil\u00f6schungen von Freunden \u00fcbernehmen
 dialog.customsync.syncdeletionwithothers=Dateil\u00f6schungen von Anderen \u00fcbernehmen
-dialog.customsync.syncprofilescombo=Standart Synchronizationsprofile
+dialog.customsync.syncprofilescombo=Standard Synchronizationsprofile
 dialog.customsync.text=W\u00e4hlen Sie ein Profil aus oder passen Sie es an 
 dialog.customsync.timebetweenscans=Zeit zwischen der \u00c4nderungssuche
 dialog.customsync.title=W\u00e4hlen Sie das Sync Profil
@@ -178,7 +178,7 @@ dialog.synchronization.sychronizing=Synchronisiere...
 dialog.synchronization.title=Projekt synchronisation
 dialog.unable_to_connect_to_address=Kann nicht zu {0} verbinden
 dialog.unable_to_connect_to_member=Kann nicht zu {0} verbinden
-dialog.unable_to_open_port=Kann Netwerk Port {0} nicht \u00f6ffnen, PowerFolder k\u00f6nnte bereits laufen
+dialog.unable_to_open_port=Kann Netzwerk Port {0} nicht \u00f6ffnen, PowerFolder k\u00f6nnte bereits laufen
 dialog.updatecheck.developmentversion.optionrestart=Neustart
 dialog.updatecheck.downloadAndUpdate=Jetzt herunterladen und aktualisieren
 dialog.updatecheck.failed.text=Update fehlgeschlagen. Bitte \u00fcberpr\u00fcfen Sie Ihre Internetverbindung.\n \nPowerFolder Pro\: Bitte \u00fcberpr\u00fcfen Sie auch die Benutzerdaten Ihres Update-Service Accounts unter\nEinstellungen/Pro Einstellungen/PowerFolder Pro Loader.
@@ -260,7 +260,7 @@ filelist.status.no_files_available_add_files_and_invite=Keine Dateien verf\u00fc
 filelist.status.no_files_available_add_files_in_folder=Keine Dateien verf\u00fcbar... F\u00fcgen Sie dem lokalen Verzeichnis Dateien hinzu
 filelist.status.no_files_available_yet_fetching_filelist=Dateiliste wird abgerufen...
 
-filenameproblem.dialog.automatic_rename=Automatisch umbennen
+filenameproblem.dialog.automatic_rename=Automatisch umbenennen
 ##filenameproblem.dialog.automatic_rename.explained=removes invalid characters and or adds "-1", or similair fixes to create a valid (unique) filename
 filenameproblem.dialog.description=Probleme mit Dateinamen entdeckt. Wie soll das Problem gel\u00f6st werden?
 filenameproblem.dialog.exclude_from_sync=Datei ausschlie\u00dfen
@@ -763,8 +763,8 @@ preferences.dialog.statusValidFailed=DynDns {0}\: \u00dcberpr\u00fcfung fehlgesc
 preferences.dialog.statusWaitDynDns=Bitte warten Sie, w\u00e4hrend DynDns {0} \u00fcberpr\u00fcft wird\!
 preferences.dialog.title=Einstellungen
 preferences.dialog.titleProcessing=Arbeite...
-preferences.dialog.use.relayed.connections=Weitergeleitete Verbindungen zulaassen um die Konnektivit\u00e4t zu verbessern 
-preferences.dialog.use.udt.connections=NAT/Router Umgehung aktivieren um die Konnektivit\u00e4t zu verbessern
+preferences.dialog.use.relayed.connections=Relayed Verbindungen zulassen
+preferences.dialog.use.udt.connections=NAT/Router Umgehung aktivieren
 preferences.dialog.use_pf_icon=PowerFolder Verzeichnis-Symbole unter Windows anzeigen
 preferences.dialog.usedeltaonlan=Delta Sync im LAN verwenden 
 preferences.dialog.usedeltaonlan.tooltip=Verwenden Sie diese Einstellung, falls Ihr Computer an ein langsames Netzwerk angeschlossen ist
@@ -804,7 +804,7 @@ pro.http.options.username=Benutzername
 pro.http.options.withauth=Mit Anmeldung
 pro.security.autoacceptfriendkeys=Ersten \u00f6ffentlichen Schl\u00fcssel eines Freudes automatisch akzeptieren.
 pro.security.high=Hoch
-pro.security.high_info=Hoche Sicherheit (Standart)\:
+pro.security.high_info=Hoche Sicherheit (Standard)\:
 pro.security.inet_encryption_preferred=Internet\: Unverschl\u00fcsselte Verbindungen zulassen.
 pro.security.inet_encryption_required=Internet\: Nur verschl\u00fcsselte Verbindungen zulassen.
 pro.security.keymismatch=Der \u00f6ffentliche Schl\u00fcssel von {0} konnte nicht verifiziert werden.\nSoll der neue Schl\u00fcssel nun gespeichert werden?
@@ -1116,7 +1116,7 @@ wizard.host_panel.pcsjoin=Sie k\u00f6nnen nun anderen Computern Zugriff geben.
 wizard.host_panel.select=Welches Verzeichnis soll freigegeben werden?
 wizard.invite.selectlocaldirectory=W\u00e4hlen Sie das lokale Verzeichnis aus
 wizard.key=a
-wizard.loadinvitation.addtofriends={0} der Freundeslisten hizuf\u00fcgen
+wizard.loadinvitation.addtofriends={0} der Freundesliste hizuf\u00fcgen
 wizard.loadinvitation.choosefile=Einladungs-Datei \u00f6ffnen
 wizard.loadinvitation.select=Einladung-Datei ausw\u00e4hlen
 wizard.loadinvitation.selectfile=Bitte w\u00e4hlen Sie eine Einladungs-Datei aus
