Trying to fix case problem

--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -687,8 +687,6 @@ preferences.dialog.colortheme=Colour theme
 preferences.dialog.createdesktopshortcuts=Create desktop shortcuts
 preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.deleteemptydirs=Delete empty directories
-preferences.dialog.deltasync=Use delta sync
-preferences.dialog.deltasync.tooltip=Synchronise only changed file-parts.
 preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
@@ -1164,3 +1162,10 @@ wizard.whattodo.projectwork=Setup a synced project
 wizard.whattodo.title=What do you want to do?
 
 preferences.dialog.use.udt.connections=Use NAT traversal to improve connectivity
+
+preferences.dialog.deltasync=Use delta sync on the Internet
+preferences.dialog.deltasync.tooltip=Synchronise only changed file-parts
+preferences.dialog.swarming.internet=Use swarming downloads on the Internet
+preferences.dialog.swarming.internet.tooltip=Enable downloads from multiple sources coming from the Internet
+preferences.dialog.swarming.lan=Use swarming downloads in LAN
+preferences.dialog.swarming.lan.tooltip=Enable downloads from multiple sources in LAN 
