#830 - reorganize System section of About Dialog

--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -46,16 +46,15 @@ about.dialog.team=\u0627\u0644\u0641\u0631\u064a\u0642
 about.dialog.testers=\u0627\u0644\u0645\u062e\u062a\u0628\u0631\u0648\u0646
 about.dialog.title=\u0639\u0646 PowerFolder
 about.dialog.translators=\u0627\u0644\u0645\u062a\u0631\u062c\u0645\u0648\u0646
-about.dialog.version.builddate=\u062a\u0627\u0631\u064a\u062e \u0627\u0644\u0628\u0646\u0627\u0621\: {0}
-about.dialog.version.buildtime=\u0648\u0642\u062a \u0627\u0644\u0628\u0646\u0627\u0621\: {0}
-about.dialog.version.text=\u0627\u0644\u0646\u0633\u062e\u0629\: {0}
-about.dialog.version.title=\u0627\u0644\u0646\u0633\u062e\u0629
+about.dialog.power_folder.builddate=\u062a\u0627\u0631\u064a\u062e \u0627\u0644\u0628\u0646\u0627\u0621\: {0}
+about.dialog.power_folder.buildtime=\u0648\u0642\u062a \u0627\u0644\u0628\u0646\u0627\u0621\: {0}
+about.dialog.power_folder.text=\u0627\u0644\u0646\u0633\u062e\u0629\: {0}
+##about.dialog.power_folder.max=Max memory\: {0}MB
+##about.dialog.power_folder.used=Used memory\: {0}MB
 about.dialog.yoursystem.java_version=\u0646\u0633\u062e\u0629 \u0627\u0644\u062c\u0627\u0641\u0627\: {0}
-##about.dialog.yoursystem.max=Max memory\: {0}MB
 about.dialog.yoursystem.os=OS\: {0}
 about.dialog.yoursystem.screen=\u0627\u0644\u0634\u0627\u0634\u0629\: {0}x{1}
 about.dialog.yoursystem.title=\u0646\u0638\u0627\u0645\u0643
-##about.dialog.yoursystem.used=Used memory\: {0}MB
 about.dialog_about_tab=\u0639\u0646
 about.dialog_contributers_tab=\u0627\u0644\u0641\u0631\u064a\u0642
 about.key=\u0623
