--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -48,16 +48,15 @@ about.dialog.team=Team
 about.dialog.testers=Tester
 about.dialog.title=\u00dcber PowerFolder
 about.dialog.translators=\u00dcbersetzer
-about.dialog.version.builddate=Build datum\: {0}
-about.dialog.version.buildtime=Build Zeit\: {0}
-about.dialog.version.text=Version\: {0}
-about.dialog.version.title=Version
+about.dialog.power_folder.builddate=Build datum\: {0}
+about.dialog.power_folder.buildtime=Build Zeit\: {0}
+about.dialog.power_folder.text=Version\: {0}
+about.dialog.power_folder.max=Speicher (max)\: {0}MB
+about.dialog.power_folder.used=Speicher (benutzt)\: {0}MB
 about.dialog.yoursystem.java_version=Java Version\: {0}
-about.dialog.yoursystem.max=Speicher (max)\: {0}MB
 about.dialog.yoursystem.os=OS\: {0}
 about.dialog.yoursystem.screen=Aufl\u00f6sung\: {0}x{1}
 about.dialog.yoursystem.title=Ihr System
-about.dialog.yoursystem.used=Speicher (benutzt)\: {0}MB
 about.dialog_about_tab=\u00fcber
 about.dialog_contributers_tab=team
 about.key=h
@@ -91,7 +90,7 @@ change.friend.personal.message.text=Schicken Sie {0} eine pers\u00f6nliche Nachr
 change.friend.personal.message.title=Nachricht f\u00fcr einen Freund
 
 chat.notification.option1=Antworten
-chat.notification.option2=Schließen
+chat.notification.option2=Schlieï¿½en
 chat.notification.subtitle=<html><center><b>PowerFolder</b></center>Neue Nachricht erhalten</html>
 
 chatpanel.cannot_deliver=Die Nachricht konnte nicht zugestellt werden, da '{0}' nicht verbunden ist\!
