--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -46,16 +46,15 @@ about.dialog.team=Equipo
 about.dialog.testers=Testers
 about.dialog.title=Acerca de PowerFolder
 about.dialog.translators=Traductores
-about.dialog.version.builddate=Build date\: {0}
-about.dialog.version.buildtime=Build time\: {0}
-about.dialog.version.text=Versi\u00f3n\: {0}
-about.dialog.version.title=Versi\u00f3n
+about.dialog.power_folder.builddate=Build date\: {0}
+about.dialog.power_folder.buildtime=Build time\: {0}
+about.dialog.power_folder.text=Versi\u00f3n\: {0}
+about.dialog.power_folder.max=M\u00e1ximo de memoria\: {0}MB
+about.dialog.power_folder.used=Memoria usada\: {0}MB
 about.dialog.yoursystem.java_version=Versi\u00f3n de Java\: {0}
-about.dialog.yoursystem.max=M\u00e1ximo de memoria\: {0}MB
 about.dialog.yoursystem.os=SO\: {0}
 about.dialog.yoursystem.screen=Resoluci\u00f3n de Pantalla\: {0}x{1}
 about.dialog.yoursystem.title=Su Sistema
-about.dialog.yoursystem.used=Memoria usada\: {0}MB
 about.dialog_about_tab=acerca
 about.dialog_contributers_tab=equipo
 about.key=h
