--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -46,16 +46,15 @@ about.dialog.team=Equipe
 about.dialog.testers=Testeurs
 about.dialog.title=A propos de PowerFolder
 about.dialog.translators=Traducteurs
-about.dialog.version.builddate=Build date\: {0}
-about.dialog.version.buildtime=Build time\: {0}
-about.dialog.version.text=Version\: {0}
-about.dialog.version.title=Version
+about.dialog.power_folder.builddate=Build date\: {0}
+about.dialog.power_folder.buildtime=Build time\: {0}
+about.dialog.power_folder.text=Version\: {0}
+about.dialog.power_folder.max=M\u00e9moire Max\: {0}MB
+about.dialog.power_folder.used=M\u00e9moire utilis\u00e9e\: {0}MB
 about.dialog.yoursystem.java_version=Version Java\: {0}
-about.dialog.yoursystem.max=M\u00e9moire Max\: {0}MB
 about.dialog.yoursystem.os=OS\: {0}
 about.dialog.yoursystem.screen=Ecran\: {0}x{1}
 about.dialog.yoursystem.title=Votre Syst\u00e8me
-about.dialog.yoursystem.used=M\u00e9moire utilis\u00e9e\: {0}MB
 about.dialog_about_tab=A propos de
 about.dialog_contributers_tab=Equipe
 about.key=D
