--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -46,16 +46,15 @@ about.dialog.team=Team
 about.dialog.testers=Testers
 about.dialog.title=About PowerFolder
 about.dialog.translators=Traduttori
-about.dialog.version.builddate=Data di build\: {0}
-about.dialog.version.buildtime=Ora di build\: {0}
-about.dialog.version.text=Versione\: {0}
-about.dialog.version.title=Versione
+about.dialog.power_folder.builddate=Data di build\: {0}
+about.dialog.power_folder.buildtime=Ora di build\: {0}
+about.dialog.power_folder.text=Versione\: {0}
+about.dialog.power_folder.max=Memoria max.\: {0}MB
+about.dialog.power_folder.used=Memoria utilizzata\: {0}MB
 about.dialog.yoursystem.java_version=Versione di Java\: {0}
-about.dialog.yoursystem.max=Memoria max.\: {0}MB
 about.dialog.yoursystem.os=OS\: {0}
 about.dialog.yoursystem.screen=Schermo\: {0}x{1}
 about.dialog.yoursystem.title=Il tuo sistema
-about.dialog.yoursystem.used=Memoria utilizzata\: {0}MB
 about.dialog_about_tab=about
 about.dialog_contributers_tab=team
 about.key=A
