--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -46,16 +46,15 @@ about.dialog.team=Team
 about.dialog.testers=Testers
 about.dialog.title=Over PowerFolder
 about.dialog.translators=Vertalers
-about.dialog.version.builddate=Gemaakt op\: {0}
-about.dialog.version.buildtime=om\: {0}
-about.dialog.version.text=Versie\: {0}
-about.dialog.version.title=Versie
+about.dialog.power_folder.builddate=Gemaakt op\: {0}
+about.dialog.power_folder.buildtime=om\: {0}
+about.dialog.power_folder.text=Versie\: {0}
+##about.dialog.power_folder.max=Max memory\: {0}MB
+##about.dialog.power_folder.used=Used memory\: {0}MB
 about.dialog.yoursystem.java_version=Java versie\: {0}
-##about.dialog.yoursystem.max=Max memory\: {0}MB
 about.dialog.yoursystem.os=BS\: {0}
 about.dialog.yoursystem.screen=Scherm\: {0}x{1}
 about.dialog.yoursystem.title=Uw systeem
-##about.dialog.yoursystem.used=Used memory\: {0}MB
 about.dialog_about_tab=Over
 about.dialog_contributers_tab=Team
 about.key=h
