--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -46,16 +46,16 @@ about.dialog.team=Team
 about.dialog.testers=Testerzy
 about.dialog.title=O Programie PowerFolder
 about.dialog.translators=T\u0142umaczenia
-about.dialog.version.builddate=Data kompilacji\: {0}
-about.dialog.version.buildtime=Godzina kompilacji\: {0}
-about.dialog.version.text=Wersja\: {0}
-about.dialog.version.title=Wersja
+about.dialog.power_folder.builddate=Data kompilacji\: {0}
+about.dialog.power_folder.buildtime=Godzina kompilacji\: {0}
+about.dialog.power_folder.text=Wersja\: {0}
+about.dialog.power_folder.title=Wersja
+about.dialog.power_folder.max=Dost\u0119pna pami\u0119\u0107\: {0}MB
+about.dialog.power_folder.used=U\u017cyta pami\u0119\u0107\: {0}MB
 about.dialog.yoursystem.java_version=Wersja Javy\: {0}
-about.dialog.yoursystem.max=Dost\u0119pna pami\u0119\u0107\: {0}MB
 about.dialog.yoursystem.os=System Operacyjny\: {0}
 about.dialog.yoursystem.screen=Ekran\: {0}x{1}
 about.dialog.yoursystem.title=Tw\u00f3j System
-about.dialog.yoursystem.used=U\u017cyta pami\u0119\u0107\: {0}MB
 about.dialog_about_tab=O programie
 about.dialog_contributers_tab=Team
 about.key=h
