--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -46,16 +46,15 @@ about.dialog.team=Team
 about.dialog.testers=Testare
 about.dialog.title=Om PowerFolder
 about.dialog.translators=\u00d6vers\u00e4ttare
-about.dialog.version.builddate=Skapad datum\: {0}
-about.dialog.version.buildtime=Skapad kl\: {0}
-about.dialog.version.text=Version\: {0}
-about.dialog.version.title=Version
+about.dialog.power_folder.builddate=Skapad datum\: {0}
+about.dialog.power_folder.buildtime=Skapad kl\: {0}
+about.dialog.power_folder.text=Version\: {0}
+##about.dialog.power_folder.max=Max memory\: {0}MB
+##about.dialog.power_folder.used=Used memory\: {0}MB
 about.dialog.yoursystem.java_version=Java Version\: {0}
-##about.dialog.yoursystem.max=Max memory\: {0}MB
 about.dialog.yoursystem.os=OS\: {0}
 about.dialog.yoursystem.screen=Bildsk\u00e4rm\: {0}x{1}
 about.dialog.yoursystem.title=Ditt system
-##about.dialog.yoursystem.used=Used memory\: {0}MB
 about.dialog_about_tab=om
 about.dialog_contributers_tab=team
 about.key=h
