--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -46,16 +46,15 @@ about.dialog.team=\u5f00\u53d1\u56e2\u961f
 about.dialog.testers=\u6d4b\u8bd5\u4eba\u5458
 about.dialog.title=\u5173\u4e8ePowerFolder
 about.dialog.translators=\u7ffb\u8bd1\u4eba\u5458
-about.dialog.version.builddate=\u7f16\u8bd1\u65e5\u671f\uff1a {0}
-about.dialog.version.buildtime=\u7f16\u8bd1\u65f6\u95f4\uff1a {0}
-about.dialog.version.text=\u7248\u672c\uff1a{0}
-about.dialog.version.title=\u7248\u672c
+about.dialog.power_folder.builddate=\u7f16\u8bd1\u65e5\u671f\uff1a {0}
+about.dialog.power_folder.buildtime=\u7f16\u8bd1\u65f6\u95f4\uff1a {0}
+about.dialog.power_folder.text=\u7248\u672c\uff1a{0}
+about.dialog.power_folder.max=\u6700\u5927\u5185\u5b58\: {0}MB
+about.dialog.power_folder.used=\u5df2\u7528\u5185\u5b58\: {0}MB
 about.dialog.yoursystem.java_version=Java\u7248\u672c\uff1a {0}
-about.dialog.yoursystem.max=\u6700\u5927\u5185\u5b58\: {0}MB
 about.dialog.yoursystem.os=\u64cd\u4f5c\u7cfb\u7edf\uff1a{0}
 about.dialog.yoursystem.screen=\u5206\u8fa8\u7387\uff1a {0}x{1}
 about.dialog.yoursystem.title=\u5f53\u524d\u7cfb\u7edf
-about.dialog.yoursystem.used=\u5df2\u7528\u5185\u5b58\: {0}MB
 about.dialog_about_tab=\u5173\u4e8e
 about.dialog_contributers_tab=\u56e2\u961f
 about.key=h
