--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -46,16 +46,15 @@ about.dialog.team=\u30c1\u30fc\u30e0
 about.dialog.testers=\u52d5\u4f5c\u8a66\u9a13
 about.dialog.title=PowerFolder \u306b\u3064\u3044\u3066
 about.dialog.translators=\u7ffb\u8a33
-about.dialog.version.builddate=\u30d3\u30eb\u30c9 \u65e5\u4ed8\: {0}
-about.dialog.version.buildtime=\u30d3\u30eb\u30c9 \u6642\u523b\: {0}
-about.dialog.version.text=\u30d0\u30fc\u30b8\u30e7\u30f3\: {0}
-about.dialog.version.title=\u30d0\u30fc\u30b8\u30e7\u30f3
+about.dialog.power_folder.builddate=\u30d3\u30eb\u30c9 \u65e5\u4ed8\: {0}
+about.dialog.power_folder.buildtime=\u30d3\u30eb\u30c9 \u6642\u523b\: {0}
+about.dialog.power_folder.text=\u30d0\u30fc\u30b8\u30e7\u30f3\: {0}
+about.dialog.power_folder.max=\u6700\u5927\u30e1\u30e2\u30ea\: {0}MB
+about.dialog.power_folder.used=\u4f7f\u7528\u30e1\u30e2\u30ea\: {0}MB
 about.dialog.yoursystem.java_version=Java \u30d0\u30fc\u30b8\u30e7\u30f3\: {0}
-about.dialog.yoursystem.max=\u6700\u5927\u30e1\u30e2\u30ea\: {0}MB
 about.dialog.yoursystem.os=OS\: {0}
 about.dialog.yoursystem.screen=\u753b\u9762\: {0}x{1}
 about.dialog.yoursystem.title=\u30b7\u30b9\u30c6\u30e0
-about.dialog.yoursystem.used=\u4f7f\u7528\u30e1\u30e2\u30ea\: {0}MB
 about.dialog_about_tab=\u60c5\u5831
 about.dialog_contributers_tab=\u30c1\u30fc\u30e0
 about.key=H
