--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -46,16 +46,16 @@ about.dialog.team=\u0421\u043e\u0437\u0434\u0430\u0442\u0435\u043b\u0438
 about.dialog.testers=\u0422\u0435\u0441\u0442\u0435\u0440\u044b
 about.dialog.title=\u041e PowerFolder
 about.dialog.translators=\u041f\u0435\u0440\u0435\u0432\u043e\u0434\u0447\u0438\u043a\u0438
-about.dialog.version.builddate=\u0414\u0435\u043d\u044c \u0432\u044b\u043f\u0443\u0441\u043a\u0430\: {0}
-about.dialog.version.buildtime=\u0412\u0440\u0435\u043c\u044f \u0432\u044b\u043f\u0443\u0441\u043a\u0430\: {0}
-about.dialog.version.text=\u0412\u0435\u0440\u0438\u044f\: {0}
-about.dialog.version.title=\u0412\u0435\u0440\u0441\u0438\u044f
+about.dialog.power_folder.builddate=\u0414\u0435\u043d\u044c \u0432\u044b\u043f\u0443\u0441\u043a\u0430\: {0}
+about.dialog.power_folder.buildtime=\u0412\u0440\u0435\u043c\u044f \u0432\u044b\u043f\u0443\u0441\u043a\u0430\: {0}
+about.dialog.power_folder.text=\u0412\u0435\u0440\u0438\u044f\: {0}
+about.dialog.power_folder.title=\u0412\u0435\u0440\u0441\u0438\u044f
+about.dialog.power_folder.max=\u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u043e \u043f\u0430\u043c\u044f\u0442\u0438\: {0}\u041c\u0411
+about.dialog.power_folder.used=\u0418\u0441\u043f\u043e\u043b\u044c\u0437\u0443\u0435\u043c\u043e\u0439 \u043f\u0430\u043c\u044f\u0442\u0438\: {0}\u041c\u0411
 about.dialog.yoursystem.java_version=\u0412\u0435\u0440\u0441\u0438\u044f Java \: {0}
-about.dialog.yoursystem.max=\u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u043e \u043f\u0430\u043c\u044f\u0442\u0438\: {0}\u041c\u0411
 about.dialog.yoursystem.os=\u041e\u0421\: {0}
 about.dialog.yoursystem.screen=\u0414\u0438\u0441\u043f\u043b\u0435\u0439\: {0}x{1}
 about.dialog.yoursystem.title=\u0412\u0430\u0448\u0430 \u0421\u0438\u0441\u0442\u0435\u043c\u0430
-about.dialog.yoursystem.used=\u0418\u0441\u043f\u043e\u043b\u044c\u0437\u0443\u0435\u043c\u043e\u0439 \u043f\u0430\u043c\u044f\u0442\u0438\: {0}\u041c\u0411
 about.dialog_about_tab=\u0418\u043d\u0444\u043e
 about.dialog_contributers_tab=\u0421\u043e\u0437\u0434\u0430\u0442\u0435\u043b\u0438
 about.key=h
