--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -19,6 +19,10 @@
 # http://www.powerfolder.com
 #
 
+setup.description=Erstellt ein neuen oder tritt existierendem PowerFolder bei
+setup.key=s
+setup.name=Setup
+
 abortcopy.description=Bricht den Kopiervorgang ab
 abortcopy.key=A
 abortcopy.name=Abbrechen
