#538 - standard wizard improvements in PFWizardPanel.

--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1113,7 +1113,7 @@ wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\
 wizard.syncpcspanel.pcsjoin=Other computers can join this folder now
 wizard.syncpcspanel.select=Please select the directory which should be mirrored
 wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
-wizard.webservice.learnmore=What is the PowerFolder Online Storage?
+wizard.webservice.learnmore=What is PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
 wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
 wizard.webservice.mirrorsetup=Backup Folder by Online Storage
