--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1120,7 +1120,7 @@ wizard.syncpcspanel.foldersyncsuccess=U heeft succesvol een "exacte kopie" van e
 wizard.syncpcspanel.pcsjoin=U kunt nu meerdere PCs lid maken van deze folder
 wizard.syncpcspanel.select=Selecteer de map waarvan een "exacte kopie" gemaakt moet worden
 ##wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
-##wizard.webservice.learnmore=What is the PowerFolder Online Storage?
+##wizard.webservice.learnmore=What is PowerFolder Online Storage?
 wizard.webservice.login=Online Opslag Inloggen
 ##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
 ##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
