--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -1120,7 +1120,7 @@ wizard.setupsuccess=Inst\u00e4llningarna lyckades
 wizard.syncpcspanel.pcsjoin=Andra datorer kan g\u00e5 med i denna folder nu
 ##wizard.syncpcspanel.select=Please select the directory which should be mirrored
 ##wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
-##wizard.webservice.learnmore=What is the PowerFolder Online Storage?
+##wizard.webservice.learnmore=What is PowerFolder Online Storage?
 ##wizard.webservice.login=Online Storage Login
 ##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
 ##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
