Correct case of 'Friend List' consistent with other node headings.

--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -440,7 +440,7 @@ general.folder.public=Public (visible for all)
 general.folder.secret=Private (requires invitation)
 general.foldername=Name
 general.friday=Friday
-general.friendlist=Friend list
+general.friendlist=Friend List
 general.from=from
 general.help=help
 general.hide=hide
