#918 - fix up/download cleanup ... and fix case of some 'Powerfolder' text --> 'PowerFolder'.

--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -98,7 +98,7 @@ clearcompleteddownloads.description=Efface la liste des t\u00e9l\u00e9chargement
 clearcompleteddownloads.key=N
 clearcompleteddownloads.name=Nettoyage
 
-connect.description=Se connecter \u00e0 un utilisateur de Powerfolder
+connect.description=Se connecter \u00e0 un utilisateur de PowerFolder
 connect.dialog.text=Entrer l'adresse IP de l'utilisateur auquel vous voulez vous connecter.\n\nPowerFolder se connecte automatiquement au r\u00e9seau apr\u00e8s quelques secondes,\nutilisez cette option pour une connexion manuelle \u00e0 un autre utilisateur.\n
 connect.dialog.title=Se connecter \u00e0 un utilisateur de PowerFolder
 connect.key=C
@@ -249,7 +249,7 @@ filelist.filefilter.searchfieldinfo=Saisir un mot clef pour rechercher ...
 filelist.modifiedby=Modifi\u00e9 par
 filelist.name=Nom
 filelist.recursive=Vue \u00e0 plat
-filelist.status.no_files_available_add_files_and_invite=Aucun fichier disponible... ajouter des fichiers dans un dossier Powerfolder et envoyer des invitations
+filelist.status.no_files_available_add_files_and_invite=Aucun fichier disponible... ajouter des fichiers dans un dossier PowerFolder et envoyer des invitations
 filelist.status.no_files_available_add_files_in_folder=Aucun fichier disponible... ajouter des fichiers dans votre dossier local pour les partager
 filelist.status.no_files_available_yet_fetching_filelist=Aucun fichier actuellement disponible... chercher dans la liste des fichiers
 
