--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -98,9 +98,9 @@ clearcompleteddownloads.description=Cancella la lista dei download appena comple
 clearcompleteddownloads.key=P
 clearcompleteddownloads.name=Pulisci
 
-connect.description=Connessione manuale ad un utente Powerfolder
+connect.description=Connessione manuale ad un utente PowerFolder
 connect.dialog.text=Inserisci un hostname o l'ip dell'utente con cui vuoi connetterti.\n\nPowerFolder automaticamente si connetter\u00E0 alla rete dopo poco tempo,\nusa questa opzione se vuoi connetterti manualmente ad un utente.\n
-connect.dialog.title=Connessione manuale ad un utente Powerfolder
+connect.dialog.title=Connessione manuale ad un utente PowerFolder
 connect.key=c
 connect.name=Connesso
 
