--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -98,9 +98,9 @@ chatpanel.member_left_folder_at_time={0} verliet de Folder om {1}
 clearcompleteddownloads.key=R
 clearcompleteddownloads.name=Ruim op
 
-connect.description=Maak verbinding met een Powerfolder gebruiker
+connect.description=Maak verbinding met een PowerFolder gebruiker
 connect.dialog.text=Vul de hostname of ip adres in van de gebruiker waarmee u wilt verbinden.\n\nPowerFolder zal automatisch met het netwerk verbinden na een korte tijd,\ngebruik deze optie om met een gebruiker te verbinden.\n 
-connect.dialog.title=Maak verbinding met een Powerfolder gebruiker
+connect.dialog.title=Maak verbinding met een PowerFolder gebruiker
 connect.key=V
 connect.name=Verbinden
 
