--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -98,9 +98,9 @@ clearcompleteddownloads.description=\u6e05\u9664\u6700\u8fd1\u5b8c\u6210\u7684\u
 clearcompleteddownloads.key=c
 clearcompleteddownloads.name=\u6e05\u9664
 
-connect.description=\u624b\u52a8\u8fde\u63a5\u5230 Powerfolder \u7528\u6237
+connect.description=\u624b\u52a8\u8fde\u63a5\u5230 PowerFolder \u7528\u6237
 connect.dialog.text=\u8bf7\u8f93\u5165\u4f60\u60f3\u8fde\u63a5\u7684\u4e3b\u673a\u540d\u6216IP\n\nPowerFolder\u5c06\u5728\u7a0d\u540e\u81ea\u52a8\u8fde\u63a5\uff0c\n\u5982\u679c\u4f60\u60f3\u624b\u52a8\u8fde\u63a5\u8bf7\u4f7f\u7528\u8be5\u9009\u9879\u3002\n
-connect.dialog.title=\u624b\u52a8\u8fde\u63a5\u5230 Powerfolder \u7528\u6237
+connect.dialog.title=\u624b\u52a8\u8fde\u63a5\u5230 PowerFolder \u7528\u6237
 connect.key=c
 connect.name=\u8fde\u63a5
 
