--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -98,9 +98,9 @@ clearcompleteddownloads.description=Borrar lista de descargas completas reciente
 clearcompleteddownloads.key=c
 clearcompleteddownloads.name=Limpiar
 
-connect.description=Conexi\u00f3n manual a un usuario de Powerfolder
+connect.description=Conexi\u00f3n manual a un usuario de PowerFolder
 connect.dialog.text=Por favor teclee el nombre de servidor o la IP del usuario al que se quiere conectar.\n\nPowerFolder se conecta autom\u00e1ticamente a la red despu\u00e9s de un corto per\u00edodo de tiempo,\nuse esta opci\u00f3n si quiere conectarse manualmente a un usuario.\n
-connect.dialog.title=Conexi\u00f3n manual a un usuario de Powerfolder
+connect.dialog.title=Conexi\u00f3n manual a un usuario de PowerFolder
 connect.key=c
 connect.name=Conectar
 
