--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -797,10 +797,7 @@ quickinfo.folder.number_of_files_and_size={0} \u0645\u0644\u0641\u0627\u062a, {1
 quickinfo.folder.status_of_folder=\u0648\u0636\u0639\u064a\u0629 \u0627\u0644 {0}
 quickinfo.friends.online={0} \u0645\u0646 {1} \u0623\u0635\u062f\u0642\u0627\u0621 \u0639\u0644\u0649 \u0627\u0644\u062e\u0637
 quickinfo.friends.usersfound={0} \u0645\u0633\u062a\u062e\u062f\u0645\u0648\u0646 \u0648\u062c\u062f\u0648\u0627
-##quickinfo.myfolders.title=Status of my PowerFolders
-##quickinfo.previewfolders.folders={0} in {1} folder(s)
-##quickinfo.previewfolders.nosync=Preview folders are not synchronized
-##quickinfo.previewfolders.title=Status of Preview Folders
+##quickinfo.myfolders.title=Status of My PowerFolders
 quickinfo.recylcebin.files={0} \u0645\u0644\u0641\u0627\u062a \u0641\u064a \u0633\u0644\u0629 \u0627\u0644\u0645\u062d\u0630\u0648\u0641\u0627\u062a
 quickinfo.recylcebin.title=\u0633\u0644\u0629 \u0627\u0644\u0645\u062d\u0630\u0648\u0641\u0627\u062a
 quickinfo.root.downloads={0} \u0645\u0644\u0641\u0627\u062a \u062a\u062d\u0645\u064a\u0644 \u062a\u0645 \u0625\u0646\u062c\u0627\u0632\u0647\u0627
