--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -795,10 +795,7 @@ quickinfo.folder.number_of_files_and_size={0} File(s), {1}
 quickinfo.folder.status_of_folder=Status of {0}
 quickinfo.friends.online={0} of {1} friend(s) are online
 quickinfo.friends.usersfound={0} users found
-quickinfo.myfolders.title=Status of my PowerFolders
-quickinfo.previewfolders.folders={0} in {1} folder(s)
-quickinfo.previewfolders.nosync=Preview folders are not synchronised
-quickinfo.previewfolders.title=Status of Preview Folders
+quickinfo.myfolders.title=Status of My PowerFolders
 quickinfo.recylcebin.files={0} file(s) in Recycle Bin
 quickinfo.recylcebin.title=Recycle Bin
 quickinfo.root.downloads={0} download(s) recently completed
