--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -797,10 +797,7 @@ quickinfo.folder.number_of_files_and_size={0} Bestand(en), {1}
 quickinfo.folder.status_of_folder=Status van {0}
 quickinfo.friends.online={0} van {1} vrienden zijn online
 quickinfo.friends.usersfound={0} gebruikers gevonden
-##quickinfo.myfolders.title=Status of my PowerFolders
-##quickinfo.previewfolders.folders={0} in {1} folder(s)
-##quickinfo.previewfolders.nosync=Preview folders are not synchronized
-##quickinfo.previewfolders.title=Status of Preview Folders
+##quickinfo.myfolders.title=Status of My PowerFolders
 quickinfo.recylcebin.files={0} bestand(en) in Prullenbak
 quickinfo.recylcebin.title=Prullenbak
 quickinfo.root.downloads={0} download(s) recent voltooid
