--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -797,10 +797,7 @@ quickinfo.folder.number_of_files_and_size={0} fil(er), {1}
 quickinfo.folder.status_of_folder=Status av {0}
 quickinfo.friends.online={0} av {1} v\u00e4n(ner) \u00e4r online
 quickinfo.friends.usersfound={0} anv\u00e4ndare hittade
-##quickinfo.myfolders.title=Status of my PowerFolders
-##quickinfo.previewfolders.folders={0} in {1} folder(s)
-##quickinfo.previewfolders.nosync=Preview folders are not synchronized
-##quickinfo.previewfolders.title=Status of Preview Folders
+##quickinfo.myfolders.title=Status of My PowerFolders
 quickinfo.recylcebin.files={0} fil(er) i papperskorgen
 quickinfo.recylcebin.title=Papperskorgen
 quickinfo.root.downloads={0} nedladdning(ar) nyligen klara
