--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -798,10 +798,7 @@ quickinfo.folder.number_of_files_and_size={0} Plik\u00f3w, {1}
 quickinfo.folder.status_of_folder=Stan folderu {0}
 quickinfo.friends.online={0} z {1} znajomych jest online
 quickinfo.friends.usersfound=Znaleziono {0} u\u017cytkownik\u00f3w
-##quickinfo.myfolders.title=Status of my PowerFolders
-##quickinfo.previewfolders.folders={0} in {1} folder(s)
-##quickinfo.previewfolders.nosync=Preview folders are not synchronized
-##quickinfo.previewfolders.title=Status of Preview Folders
+##quickinfo.myfolders.title=Status of My PowerFolders
 quickinfo.recylcebin.files={0} plik\u00f3w w Koszu
 quickinfo.recylcebin.title=Kosz
 quickinfo.root.downloads=Liczba zako\u0144czonych pobra\u0144\: {0}
